email table colors

--- a/app/views/offer_mailer/response_email.html.erb
+++ b/app/views/offer_mailer/response_email.html.erb
@@ -145,15 +145,15 @@
 </table>
 <!-- End of header --> 
 <!-- start textbox-with-title -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid blue;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid green;">
+            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid yellow;">
+                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
@@ -162,7 +162,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td>
-                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid red;">
+                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
                                        <tbody>
                                           <!-- Title -->
                                           <tr>
@@ -221,15 +221,15 @@
 </table>
 <% if @pinsaccepted.first %>   
 	<!-- start invoice table -->
-	<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="invoiceTable" style="border: 0px solid green;">
+	<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="invoiceTable">
 	   <tbody>
 	      <tr>
 	         <td>
-	            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid blue;">
+	            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
 	               <tbody>
 	                  <tr>
 	                     <td width="100%">
-	                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid red;">
+	                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
 	                           <tbody>
 	                              <!-- Spacing -->
 	                              <tr>
@@ -238,7 +238,7 @@
 	                              <!-- Spacing -->
 	                              <tr>
 	                                 <td>
-	                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid yellow;">
+	                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
 	                                       <tbody>
 	                                       	  <!-- more content -->
 	                                          <tr>
@@ -306,15 +306,15 @@
 	<!-- end invoice table -->
 <% end %>
 <!-- start of post table text -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid blue;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid green;">
+            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid yellow;">
+                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
@@ -323,7 +323,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td>
-                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid red;">
+                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
                                        <tbody>
                                           <% if @pinsaccepted.first %>
                                              <!-- Spacing -->
@@ -381,15 +381,15 @@
 </table>  
 <!-- end of post table text -->
 <!-- start of sign off text -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid blue;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid green;">
+            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid yellow;">
+                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
@@ -398,7 +398,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td>
-                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid red;">
+                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
                                        <tbody>
                                           <!-- Spacing -->
                                           <tr>
@@ -455,7 +455,7 @@
 </table>  
 <!-- end of sign off text -->
 <!-- Start of postfooter -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid pink;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" >
    <tbody>
       <tr>
          <td>
@@ -463,7 +463,7 @@
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid red;">
+                        <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
