--- a/app/views/offer_mailer/offers_email.html.erb
+++ b/app/views/offer_mailer/offers_email.html.erb
@@ -145,15 +145,15 @@
 </table>
 <!-- End of header --> 
 <!-- start textbox-with-title -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid blue;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid green;">
+            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid yellow;">
+                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
@@ -162,7 +162,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td>
-                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid red;">
+                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
                                        <tbody>
                                           <!-- Title -->
                                           <tr>
@@ -203,15 +203,15 @@
    </tbody>
 </table>   
 <!-- start invoice table -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="invoiceTable" style="border: 0px solid green;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="invoiceTable">
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid blue;">
+            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid red;">
+                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
@@ -220,7 +220,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td>
-                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid yellow;">
+                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
                                        <tbody>
                                           <!-- invoice table -->
                                           <tr>
@@ -275,15 +275,15 @@
 </table>
 <!-- end invoice table -->
 <!-- start of post table text -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid blue;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid green;">
+            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid yellow;">
+                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
@@ -292,7 +292,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td>
-                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid red;">
+                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
                                        <tbody>
                                           <!-- Spacing -->
                                           <tr>
@@ -349,15 +349,15 @@
 </table>  
 <!-- end of post table text -->
 <!-- start of sign off text -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid blue;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid green;">
+            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid yellow;">
+                        <table bgcolor="#ffffff" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
@@ -366,7 +366,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td>
-                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner" style="border: 0px solid red;">
+                                    <table width="560" align="center" cellpadding="0" cellspacing="0" border="0" class="devicewidthinner">
                                        <tbody>
                                           <!-- Spacing -->
                                           <tr>
@@ -423,7 +423,7 @@
 </table>  
 <!-- end of sign off text -->
 <!-- Start of postfooter -->
-<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border: 0px solid pink;">
+<table width="100%" bgcolor="#F6F5F1" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" >
    <tbody>
       <tr>
          <td>
@@ -431,7 +431,7 @@
                <tbody>
                   <tr>
                      <td width="100%">
-                        <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth" style="border: 0px solid red;">
+                        <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
                            <tbody>
                               <!-- Spacing -->
                               <tr>
