--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -51,5 +51,6 @@
   <p>Download All:
     <%= link_to "CSV", dashboard_path(format: "csv") %> 
   </p>
+  <p>To add new users/suppliers, logout then visit: http://www.invoicely.co.uk/users/sign_up</p>
 <% end %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
