--- a/app/views/offer_mailer/offers_email.html.erb
+++ b/app/views/offer_mailer/offers_email.html.erb
@@ -106,7 +106,7 @@
 
    <body>
 <!-- Start of header -->
-<table width="100%" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="background: url(http://www.fatface.com/content/ebiz/fatface/resources/images/ff-header-bg.jpg) #2d2d2d !important;">
+<table width="100%" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" background="http://www.fatface.com/content/ebiz/fatface/resources/images/ff-header-bg.jpg">
    <tbody>
       <tr>
          <td>
@@ -123,7 +123,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td width="100%" height="86" align="center" style="color: #F6F5F1;">
-                                    <img id="fflogo" alt="Fat Face" style="height: 85px;" src="https://invoicebutler.herokuapp.com/assets/FFLogo-71bcea754cc77b5da23e246313afbd15db8b69f984ac4b01670379724b8ff798.png">
+                                    <img id="fflogo" alt="Fat Face" style="height: 85px;" src="http://www.invoicely.co.uk/assets/FFLogo-71bcea754cc77b5da23e246313afbd15db8b69f984ac4b01670379724b8ff798.png">
                                  </td>
                               </tr>
                               <!-- Spacing -->
@@ -427,7 +427,7 @@
    <tbody>
       <tr>
          <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="1" align="center" class="devicewidth" style="background: url(http://www.fatface.com/content/ebiz/fatface/resources/images/ff-header-bg.jpg) #2d2d2d !important;">
+            <table width="600" cellpadding="0" cellspacing="0" border="1" align="center" class="devicewidth" background="http://www.fatface.com/content/ebiz/fatface/resources/images/ff-header-bg.jpg">
                <tbody>
                   <tr>
                      <td width="100%">
