--- a/app/views/offer_mailer/offers_email.html.erb
+++ b/app/views/offer_mailer/offers_email.html.erb
@@ -123,7 +123,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td width="100%" height="86" align="center" style="color: #F6F5F1;">
-                                    <img id="fflogo" alt="Fat Face" style="height: 85px;" src="http://www.invoicely.co.uk/assets/FFLogo-71bcea754cc77b5da23e246313afbd15db8b69f984ac4b01670379724b8ff798.png">
+                                    <img id="fflogo" alt="Fat Face" style="height: 85px;" src="http://www.invoicely.co.uk/assets/FFlogo85-ae013748f1720e3ef38a921050b99692da0bc2b45024be39a75c8014ebbcfa08.png">
                                  </td>
                               </tr>
                               <!-- Spacing -->
@@ -166,7 +166,7 @@
                                        <tbody>
                                           <!-- Title -->
                                           <tr>
-                                             <td style="font-size: 38px; font-weight:bold; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif; font-size: 38px; font-weight:bold; color: #333333; text-align:left;line-height: 24px;">
                                                 Hi <%= @pins.first.ref %>,
                                              </td>
                                           </tr>
@@ -178,7 +178,7 @@
                                           <!-- End of spacing -->
                                           <!-- content -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 Good news - Fat Face has recently approved <b><%= @pins.count %></b> of your invoice(s) with the option of early payment on <b><%= fulldate(@pins.first.prop_settlement_date) %></b>.
                                              </td>
                                           </tr>
@@ -228,24 +228,24 @@
                                                 <table border="1" class="invoicetable" style="border: 1px solid back;">
                                                    <thead>
                                                       <tr>
-                                                         <th>Invoice Number</th>
-                                                         <th class='date'>Invoice Date</th>
-                                                         <th class='date'>Due Date</th>
-                                                         <th>Invoice Amount</th>
-                                                         <th class="green date">Proposed Settlement Date</th>
-                                                         <th class="green">Acceleration</th>
-                                                         <th class="green">New Offer Amount</th>
+                                                         <th style="font-family: 'Maven Pro', sans-serif;">Invoice Number</th>
+                                                         <th class='date' style="font-family: 'Maven Pro', sans-serif;">Invoice Date</th>
+                                                         <th class='date' style="font-family: 'Maven Pro', sans-serif;">Due Date</th>
+                                                         <th style="font-family: 'Maven Pro', sans-serif;">Invoice Amount</th>
+                                                         <th class="green date" style="font-family: 'Maven Pro', sans-serif;">Proposed Settlement Date</th>
+                                                         <th class="green" style="font-family: 'Maven Pro', sans-serif;">Acceleration</th>
+                                                         <th class="green" style="font-family: 'Maven Pro', sans-serif;">New Offer Amount</th>
                                                       </tr>
                                                    </thead>
                                                    <tbody>
                                                       <% @pins.each do |pin| %>
                                                          <tr>
-                                                            <th><%= pin.invoice_number %></th>
-                                                            <th><%= date(pin.invoice_date) %></th>
-                                                            <th><%= date(pin.due_date) %></th>
+                                                            <th style="font-family: 'Maven Pro', sans-serif;"><%= pin.invoice_number %></th>
+                                                            <th style="font-family: 'Maven Pro', sans-serif;"><%= date(pin.invoice_date) %></th>
+                                                            <th style="font-family: 'Maven Pro', sans-serif;"><%= date(pin.due_date) %></th>
                                                             <th class="right"><%= currency(pin.gross_invoice_amount) %></th>
-                                                            <th><%= date(pin.prop_settlement_date) %></th>
-                                                            <th><%= (pin.due_date - pin.prop_settlement_date).to_i %> days</th>
+                                                            <th style="font-family: 'Maven Pro', sans-serif;"><%= date(pin.prop_settlement_date) %></th>
+                                                            <th style="font-family: 'Maven Pro', sans-serif;"><%= (pin.due_date - pin.prop_settlement_date).to_i %> days</th>
                                                             <th class="right"><%= currency(pin.offer_amount) %></th>
                                                          </tr>
                                                       <% end %>                                                                             
@@ -301,7 +301,7 @@
                                           <!-- Spacing -->
                                           <!-- Title -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif;font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 To review your offers and accept the new terms please click below to access your bespoke supplier portal.
                                              </td>
                                           </tr>
@@ -313,7 +313,7 @@
                                           <!-- button -->
                                           <tr style="text-align: center;">
                                              <td height="35">
-                                                <a href="<%= @pins.first.string %>" class="portalBtn" >Enter Supplier Portal</a>
+                                                <a href="<%= @pins.first.string %>" class="portalBtn" style="font-family: 'Maven Pro', sans-serif;">Enter Supplier Portal</a>
                                              </td>
                                           </tr>
                                           <!-- End of button -->
@@ -323,7 +323,7 @@
                                           </tr>                                          
                                           <!-- content -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif;font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 This offer will expire on <b><%= fulldate(@pins.first.offer_expirey_date) %></b>, please make sure to action before then.
                                              </td>
                                           </tr>
@@ -375,7 +375,7 @@
                                           <!-- Spacing -->
                                           <!-- Title -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif;font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 If you have any questions please get in touch by replying to this email,
                                              </td>
                                           </tr>
@@ -386,7 +386,7 @@
                                           </tr>                                          
                                           <!-- button -->
                                           <tr>
-                                             <td height="35" style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td height="35" style="font-family: 'Maven Pro', sans-serif;font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 Kind regards,
                                              </td>
                                           </tr>
@@ -397,7 +397,7 @@
                                           </tr>                                          
                                           <!-- content -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align: left; line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif;font-size: 16px; color: #333333; text-align: left; line-height: 24px;">
                                                 Invoicely on behalf of Fat Face
                                              </td>
                                           </tr>
@@ -439,8 +439,8 @@
                               </tr>
                               <!-- Spacing -->
                               <tr>
-                                 <td align="center" valign="middle" style="font-size: 12px; color: #F6F5F1; line-height: 17px; padding: 10px;">
-                                    Your contact details have been provided to the Invoicely team by Fat Face. If any of your details are incorrect or if you no longer want to receive these offers please get in touch at <a href="mailto:fatface.offers@invoicely.co.uk" target="_top" style="color: #F6F5F1">fatface.offers@invoicely.co.uk</a>.
+                                 <td align="center" valign="middle" style="font-family: 'Maven Pro', sans-serif;font-size: 12px; color: #F6F5F1; line-height: 17px; padding: 10px;">
+                                    Your contact details have been provided to the Invoicely team by Fat Face. If any of your details are incorrect or if you no longer want to receive these offers please get in touch at <a href="mailto:fatface.offers@invoicely.co.uk" target="_top" style="color: #F6F5F1; font-family: 'Maven Pro', sans-serif">fatface.offers@invoicely.co.uk</a>.
                                  </td>
                               </tr>
                               <!-- Spacing -->
