--- a/app/views/offer_mailer/response_email.html.erb
+++ b/app/views/offer_mailer/response_email.html.erb
@@ -123,7 +123,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td width="100%" height="86" align="center" style="color: #F6F5F1;">
-                                    <img id="fflogo" alt="Fat Face" style="height: 85px;" src="https://www.invoicely.co.uk/assets/FFLogo-71bcea754cc77b5da23e246313afbd15db8b69f984ac4b01670379724b8ff798.png">
+                                    <img id="fflogo" alt="Fat Face" style="height: 85px;" src="http://www.invoicely.co.uk/assets/FFlogo85-ae013748f1720e3ef38a921050b99692da0bc2b45024be39a75c8014ebbcfa08.png">
                                  </td>
                               </tr>
                               <!-- Spacing -->
@@ -166,7 +166,7 @@
                                        <tbody>
                                           <!-- Title -->
                                           <tr>
-                                             <td style="font-size: 38px; font-weight:bold; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif; font-size: 38px; font-weight:bold; color: #333333; text-align:left;line-height: 24px;">
                                                 Hi <%= name %>,
                                              </td>
                                           </tr>
@@ -178,7 +178,7 @@
                                           <!-- End of spacing -->
                                           <!-- content -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 Thank you for submitting your responses to Fat Face’s early settlement offers. We hope you found our supplier portal easy to use. Please do let us know if you have any feedback.
                                              </td>
                                           </tr>
@@ -194,7 +194,7 @@
                                              </tr>
 	                                          <!-- more content -->
 	                                          <tr>
-	                                              <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+	                                              <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
 	                                                You have selected to receive no accelerated payments.
 	                                              </td>
 	                                          </tr>
@@ -242,7 +242,7 @@
 	                                       <tbody>
 	                                       	  <!-- more content -->
 	                                          <tr>
-	                                              <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+	                                              <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
 	                                              	<% if @pinsaccepted.first %>
 	                                                	You have accepted an early payment on the below invoices:
 	                                                <% end %>
@@ -260,23 +260,23 @@
 	                                                <table border="1" class="invoicetable" style="border: 1px solid back;">
 	                                                   <thead>
 	                                                      <tr>
-	                                                         <th>Invoice Number</th>
-	                                                         <th class='date'>Invoice Date</th>
-	                                                         <th class='date'>Old Due Date</th>
-	                                                         <th>Old Invoice Amount</th>
-	                                                         <th class="green date">New Settlement Date</th>
-	                                                         <th class="green">New Settlement Amount</th>
+	                                                         <th style="font-family: 'Maven Pro', sans-serif;">Invoice Number</th>
+	                                                         <th class='date' style="font-family: 'Maven Pro', sans-serif;">Invoice Date</th>
+	                                                         <th class='date' style="font-family: 'Maven Pro', sans-serif;">Old Due Date</th>
+	                                                         <th style="font-family: 'Maven Pro', sans-serif;">Old Invoice Amount</th>
+	                                                         <th class="green date" style="font-family: 'Maven Pro', sans-serif;">New Settlement Date</th>
+	                                                         <th class="green" style="font-family: 'Maven Pro', sans-serif;">New Settlement Amount</th>
 	                                                      </tr>
 	                                                   </thead>
 	                                                   <tbody>
 	                                                      <% @pinsaccepted.each do |pin| %>
 	                                                         <tr>
-	                                                            <th><%= pin.invoice_number %></th>
-	                                                            <th><%= date(pin.invoice_date) %></th>
-	                                                            <th><%= date(pin.due_date) %></th>
-	                                                            <th class="right"><%= currency(pin.gross_invoice_amount) %></th>
+	                                                            <th style="font-family: 'Maven Pro', sans-serif;"><%= pin.invoice_number %></th>
+	                                                            <th style="font-family: 'Maven Pro', sans-serif;"><%= date(pin.invoice_date) %></th>
+	                                                            <th> style="font-family: 'Maven Pro', sans-serif;"<%= date(pin.due_date) %></th>
+	                                                            <th class="right" style="font-family: 'Maven Pro', sans-serif;"><%= currency(pin.gross_invoice_amount) %></th>
 	                                                            <th><%= date(pin.prop_settlement_date) %></th>
-	                                                            <th class="right"><%= currency(pin.offer_amount) %></th>
+	                                                            <th class="right" style="font-family: 'Maven Pro', sans-serif;"><%= currency(pin.offer_amount) %></th>
 	                                                         </tr>
 	                                                      <% end %>                                                                             
 	                                                   </tbody>
@@ -332,7 +332,7 @@
                                              </tr>
                                              <!-- Spacing -->
    			                                 <tr>
-   			                                   <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+   			                                   <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
    			                                      You will receive <b><%= currency(totalEarlyPayment) %></b> on <b><%= fulldate(date) %></b>.
    			                                   </td>
    			                                 </tr>
@@ -344,7 +344,7 @@
                                           <!-- Spacing -->                                          
                                           <!-- Title -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 You can login to the Invoicely supplier portal using the button below at any point to keep track of your offer history.
                                              </td>
                                           </tr>
@@ -356,7 +356,7 @@
                                           <!-- button -->
                                           <tr style="text-align: center;">
                                              <td height="35">
-                                                <a href="<%= link %>" class="portalBtn" >Enter Supplier Portal</a>
+                                                <a href="<%= link %>" class="portalBtn" style="font-family: 'Maven Pro', sans-serif;" >Enter Supplier Portal</a>
                                              </td>
                                           </tr>
                                           <!-- End of button -->
@@ -407,7 +407,7 @@
                                           <!-- Spacing -->
                                           <!-- Title -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 If you have any questions please get in touch by replying to this email,
                                              </td>
                                           </tr>
@@ -418,7 +418,7 @@
                                           </tr>                                          
                                           <!-- button -->
                                           <tr>
-                                             <td height="35" style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
+                                             <td height="35" style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
                                                 Kind regards,
                                              </td>
                                           </tr>
@@ -429,7 +429,7 @@
                                           </tr>                                          
                                           <!-- content -->
                                           <tr>
-                                             <td style="font-size: 16px; color: #333333; text-align: left; line-height: 24px;">
+                                             <td style="font-family: 'Maven Pro', sans-serif; font-size: 16px; color: #333333; text-align: left; line-height: 24px;">
                                                 Invoicely on behalf of Fat Face
                                              </td>
                                           </tr>
@@ -471,8 +471,8 @@
                               </tr>
                               <!-- Spacing -->
                               <tr>
-                                 <td align="center" valign="middle" style="font-size: 12px; color: #F6F5F1; line-height: 17px; padding: 10px;">
-                                    Your contact details have been provided to the Invoicely team by Fat Face. If any of your details are incorrect or if you no longer want to receive these offers please get in touch at <a href="mailto:fatface.offers@invoicely.co.uk" target="_top" style="color: #F6F5F1">fatface.offers@invoicely.co.uk</a>.
+                                 <td align="center" valign="middle" style="font-family: 'Maven Pro', sans-serif; font-size: 12px; color: #F6F5F1; line-height: 17px; padding: 10px;">
+                                    Your contact details have been provided to the Invoicely team by Fat Face. If any of your details are incorrect or if you no longer want to receive these offers please get in touch at <a href="mailto:fatface.offers@invoicely.co.uk" target="_top" style="font-family: 'Maven Pro', sans-serif; color: #F6F5F1">fatface.offers@invoicely.co.uk</a>.
                                  </td>
                               </tr>
                               <!-- Spacing -->
