--- a/app/assets/stylesheets/bootstrap_and_cust.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_cust.css.scss
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
-@import url(https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700);
+//@import url(https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:100);
+
 
 $body-bg:                         #F6F5F1;
 $font-family-sans-serif:          'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -224,7 +225,8 @@ html, body {
 	}
 
 .ffportal{
-	font-family: 'Maven Pro', sans-serif;
+	//font-family: 'Maven Pro', sans-serif;
+	font-family: 'maven_proregular', sans-serif;
 	color: #424242;
 	font-size: 15px;
 
