--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -62,6 +62,162 @@
 }
 
 
+@font-face {
+    font-family: 'ralewayitalic';
+    src: font-url('raleway-italic-webfont.eot');
+    src: font-url('raleway-italic-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-italic-webfont.woff2') format('woff2'),
+         font-url('raleway-italic-webfont.woff') format('woff'),
+         font-url('raleway-italic-webfont.ttf') format('truetype'),
+         font-url('raleway-italic-webfont.svg#ralewayitalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaylight';
+    src: font-url('raleway-light-webfont.eot');
+    src: font-url('raleway-light-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-light-webfont.woff2') format('woff2'),
+         font-url('raleway-light-webfont.woff') format('woff'),
+         font-url('raleway-light-webfont.ttf') format('truetype'),
+         font-url('raleway-light-webfont.svg#ralewaylight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaylight_italic';
+    src: font-url('raleway-lightitalic-webfont.eot');
+    src: font-url('raleway-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-lightitalic-webfont.woff2') format('woff2'),
+         font-url('raleway-lightitalic-webfont.woff') format('woff'),
+         font-url('raleway-lightitalic-webfont.ttf') format('truetype'),
+         font-url('raleway-lightitalic-webfont.svg#ralewaylight_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaymedium';
+    src: font-url('raleway-medium-webfont.eot');
+    src: font-url('raleway-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-medium-webfont.woff2') format('woff2'),
+         font-url('raleway-medium-webfont.woff') format('woff'),
+         font-url('raleway-medium-webfont.ttf') format('truetype'),
+         font-url('raleway-medium-webfont.svg#ralewaymedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaymedium_italic';
+    src: font-url('raleway-mediumitalic-webfont.eot');
+    src: font-url('raleway-mediumitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-mediumitalic-webfont.woff2') format('woff2'),
+         font-url('raleway-mediumitalic-webfont.woff') format('woff'),
+         font-url('raleway-mediumitalic-webfont.ttf') format('truetype'),
+         font-url('raleway-mediumitalic-webfont.svg#ralewaymedium_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewayregular';
+    src: font-url('raleway-regular-webfont.eot');
+    src: font-url('raleway-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-regular-webfont.woff2') format('woff2'),
+         font-url('raleway-regular-webfont.woff') format('woff'),
+         font-url('raleway-regular-webfont.ttf') format('truetype'),
+         font-url('raleway-regular-webfont.svg#ralewayregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaysemibold';
+    src: font-url('raleway-semibold-webfont.eot');
+    src: font-url('raleway-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-semibold-webfont.woff2') format('woff2'),
+         font-url('raleway-semibold-webfont.woff') format('woff'),
+         font-url('raleway-semibold-webfont.ttf') format('truetype'),
+         font-url('raleway-semibold-webfont.svg#ralewaysemibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaysemibold_italic';
+    src: font-url('raleway-semibolditalic-webfont.eot');
+    src: font-url('raleway-semibolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-semibolditalic-webfont.woff2') format('woff2'),
+         font-url('raleway-semibolditalic-webfont.woff') format('woff'),
+         font-url('raleway-semibolditalic-webfont.ttf') format('truetype'),
+         font-url('raleway-semibolditalic-webfont.svg#ralewaysemibold_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaythin';
+    src: font-url('raleway-thin-webfont.eot');
+    src: font-url('raleway-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-thin-webfont.woff2') format('woff2'),
+         font-url('raleway-thin-webfont.woff') format('woff'),
+         font-url('raleway-thin-webfont.ttf') format('truetype'),
+         font-url('raleway-thin-webfont.svg#ralewaythin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'ralewaythin_italic';
+    src: font-url('raleway-thinitalic-webfont.eot');
+    src: font-url('raleway-thinitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         font-url('raleway-thinitalic-webfont.woff2') format('woff2'),
+         font-url('raleway-thinitalic-webfont.woff') format('woff'),
+         font-url('raleway-thinitalic-webfont.ttf') format('truetype'),
+         font-url('raleway-thinitalic-webfont.svg#ralewaythin_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 
 
